tests/unit/default/syntax-error/072-create-table-dot-name.e.t
---- IN ----
+%table.name
---- OUT ----
---- ERR ----
syntax: expected `:` after `...table.name` instead of EOL at position 12 - at line 1
---- EXIT ----
1
